[tool.poetry]
name = "recipe-index"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "recipe_index"}]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^8.0.2"
pyqt6 = "^6.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
